--- a/portfolio.html
+++ b/portfolio.html
@@ -45,64 +45,64 @@
 		<li class="content-item">
 		<img class="content-img" src="./images/9.jpg" alt="Веб-сайт"/>
 		<div class="block">
-		<h3 class="content-paragraf">Технокряк</h3>
-		<p class="content-title-h3">Веб-сайт</p>
+		<h3 class="content-title-h3">Технокряк</h3>
+		<p class="content-paragraf">Веб-сайт</p>
 		</div>
 		</li>
 		<li  class="content-item">
 		<img class="content-img" src="./images/10.jpg" alt="Дизайн"/>
 		<div class="block">
-		<h3 class="content-paragraf">Постер <span lang="en"> New Orlean vs Golden Star</span></h3>
-		<p class="content-title-h3">Дизайн</p>
+		<h3 class="content-title-h3">Постер <span lang="en"> New Orlean vs Golden Star</span></h3>
+		<p class="content-paragraf">Дизайн</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/11.jpg" alt="Додаток"/>
 		<div class="block"> 
-		<h3 class="content-paragraf">Ресторан <span lang="en"> Seafood</span></h3>
-		<p class="content-title-h3">Додаток</p>
+		<h3 class="content-title-h3">Ресторан <span lang="en"> Seafood</span></h3>
+		<p class="content-paragraf">Додаток</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/12.jpg" alt="Маркетинг"/>
 		<div class="block">
-		<h3 class="content-paragraf">Проект <span lang="en"> Prime</span></h3>
-		<p class="content-title-h3">Маркетинг</p>
+		<h3 class="content-title-h3">Проект <span lang="en"> Prime</span></h3>
+		<p class="content-paragraf">Маркетинг</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/13.jpg" alt="Додаток"/>
 		<div class="block">
-		<h3 class="content-paragraf">Проект <span lang="en"> Boxes</span></h3>
-		<p class="content-title-h3">Додаток</p>
+		<h3 class="content-title-h3">Проект <span lang="en"> Boxes</span></h3>
+		<p class="content-paragraf">Додаток</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/14.jpg" alt="Веб-сайт"/>
 		<div class="block">
-		<h3 class="content-paragraf"> <span lang="en">Inspiration has no Borders</span></h3>
-		<p class="content-title-h3">Веб-сайт</p>
+		<h3 class="content-title-h3"> <span lang="en">Inspiration has no Borders</span></h3>
+		<p class="content-paragraf">Веб-сайт</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/15.jpg" alt="Дизайн"/>
 		<div class="block">
-		<h3 class="content-paragraf">Видання <span lang="en"> Limited Edition </span></h3>
-		<p class="content-title-h3">Дизайн</p>
+		<h3 class="content-title-h3">Видання <span lang="en"> Limited Edition </span></h3>
+		<p class="content-paragraf">Дизайн</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img src="./images/16.jpg" alt="Маркетинг"/>
 		<div class="block">
-		<h3 class="content-paragraf">Проект<span lang="en"> LAB</span></h3>
-		<p class="content-title-h3">Маркетинг</p>
+		<h3 class="content-title-h3">Проект<span lang="en"> LAB</span></h3>
+		<p class="content-paragraf">Маркетинг</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/17.jpg" alt="Додаток"/>
 		<div class="block">
-		<h3 class="content-paragraf" lang="en">Growing Business</h3>
-		<p class="content-title-h3">Додаток</p>
+		<h3 class="content-title-h3" lang="en">Growing Business</h3>
+		<p class="content-paragraf">Додаток</p>
 		</div>
 		</li>
 	      </section>
