--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			      </li>
 			    <li class="person-item">
             	<img class="person-img" src="images/7.jpg" width="270px" height="260px" alt="persons"/>
-             	<h3 class="persontitle-h3">Миколай Тарасов</h3>
+             	<h3 class="person-title-h3">Миколай Тарасов</h3>
               	<p class="person-paragraf" lang="en">Marketing</p>
 		     </li>
 			<li class="person-item">
