--- a/index.html
+++ b/index.html
@@ -100,11 +100,13 @@
  <footer class="footer">
 		<div class="container">
 	    <a class="logo-bottom" href="./index.html">Web<span class="logo-color-white">Studio</span></a>
+			<address>
 		<ul class="footer-list">
 		    	<li class="footer-item"><a  class="adress" href="google.com">м.Київ, пр-т Лесі Українки Б 37</a></li>
             		<li class="footer-item"><a  lang="en" class="email-phone" href="mailto:">info@devstudio.com</a></li>
             		<li class="footer-item"><a class="email-phone" href="#Phone">+380961111111</a></li>
 					</ul>
+			</address>
 	</div>
 	    </footer>
     </body>
